# sampling

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  cuda_gen.cu
DistributedSampling/: .gitignore  CMakeLists.txt  compile.sh
DistributedSampling/analysis/: approx_dist.py  convert_results.py  evaluate_parallel.py  evaluate_sequential.py  generate_jobs.py  generate_jobs.sh  parallel.py  parallel.sh  run_jobs.sh  sequential.py  sequential.sh  test_dist.py
DistributedSampling/app/: parse_parameters.h  run_methodD.cpp  run_methodH.cpp  run_methodP.cpp  run_methodR.cpp  run_methodSH.cpp  run_methodSR.cpp  test_binom.cpp  test_hyper.cpp
DistributedSampling/lib/: definitions.h  sampling_config.h
DistributedSampling/lib/sampling/: methodD.h  methodH.h  methodP.h  methodR.h  methodSH.h
DistributedSampling/lib/tools/: arg_parser.h  benchmark.h  crc_hash.h  macros_common.h  mersenne.h  spooky_hash.h  var_gen.h
benchmark/: CMakeLists.txt  arg_parser.hpp  configuration.hpp  dummy.cpp  parse_parameters.hpp  run_methodB.cpp  run_methodD.cpp  run_methodH.cpp  run_methodP.cpp  run_methodR.cpp  run_methodSH.cpp  run_methodSR.cpp
cmake/: script.ctest
extlib/spooky/: CMakeLists.txt  spooky.cpp
include/: CMakeLists.txt  benchmark.hpp  bit_hacks.hpp  config.hpp  dSFMT.cpp  dSFMT.hpp  definitions.hpp  hash.hpp  hypergeometric_distribution.hpp  methodB.hpp  methodD.hpp  methodH.hpp  methodP.hpp  methodR.hpp  methodSH.hpp  sampling_config.hpp  stats.hpp  timer.hpp
include/rng/: dSFMT.cpp  dSFMT.hpp  mkl.hpp  select.hpp  stl.hpp
method_B/: .gitignore  Makefile  README.md  rand.cpp  run.sh
method_B/DistributedSampling/: .gitignore  SConscript  SConstruct  cleanup.sh  compile.sh  example.sh
method_B/DistributedSampling/analysis/: direct_comparison.py  direct_comparison.sh  evaluate_clean.py  evaluate_comparison.py  evaluate_tuning.py  weak_scaling.py  weak_scaling.sh
method_B/DistributedSampling/app/: configuration.h  parse_parameters.h  run_experiments.cpp  run_methodD.cpp  run_methodH.cpp  run_methodP.cpp  run_methodR.cpp  run_methodSH.cpp
method_B/DistributedSampling/lib/: definitions.h  sampling_config.h
method_B/DistributedSampling/lib/sampling/: methodD.h  methodH.h  methodP.h  methodR.h  methodSH.h
method_B/DistributedSampling/lib/tools/: bit_hacks.h  city_hash.h  macros_assertions.h  mt_wrapper.h  timer.h
method_B/include/: MKL_gen.h  errcheck.inc  sampler.h  std_gen.h  timer.h  util.h
sampling/: CMakeLists.txt  benchmark.hpp  config.hpp  definitions.hpp  hash.cpp  hash.hpp  hypergeometric_distribution.hpp  methodB.hpp  methodD.hpp  methodH.hpp  methodP.hpp  methodR.hpp  methodSH.hpp  sampling_config.hpp
sampling/rng/: dSFMT.cpp  dSFMT.hpp  mkl.hpp  select.hpp
tests/: CMakeLists.txt  hash_test.cpp  hypergeometric_distribution_test.cpp  statistics_test.cpp
